fixed down lawnmower heading off screen

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 }
 .marker {
     transform: perspective(40px) rotateX(20deg) rotateZ(-45deg);
